--- a/nginx/data.conf
+++ b/nginx/data.conf
@@ -1,5 +1,5 @@
 server {
-    server_name www.clipis.co clipis.co;
+    server_name www.clipis.co clipis.co www.api.clipis.co api.clipis.co;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -33,5 +33,31 @@ server {
         proxy_read_timeout          1m;
         proxy_connect_timeout       1m;
         proxy_pass                          http://front:3000; # set the addre$
+    }
+}
+
+server {
+    listen *:443 ssl;
+    server_name www.api.clipis.co api.clipis.co;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/api.clipis.co/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.clipis.co/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    gzip            on;
+    gzip_types      text/plain application/xml text/css application/javascript;
+    gzip_min_length 1000;
+
+    location / {
+        proxy_redirect                      off;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
+        proxy_read_timeout          1m;
+        proxy_connect_timeout       1m;
+        proxy_pass                          http://api:5000; # set the addre$
     }
 }
