--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -2,4 +2,4 @@ FROM python:3.8
 WORKDIR /api
 COPY . /api
 RUN pip install -r requirements.txt
-CMD ["uvicorn", "main:app", "--host", "api-clipis", "--port", "5000"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
