--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,5 +1,6 @@
-FROM python:3.8
+FROM continuumio/miniconda3
 WORKDIR /api
 COPY . /api
 RUN pip install -r requirements.txt
+RUN conda install -c pytorch faiss-cpu
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
