--- a/nginx/data.conf
+++ b/nginx/data.conf
@@ -51,4 +51,8 @@ server {
         proxy_connect_timeout       1m;
         proxy_pass                          http://api-clipis:8000; # set the addre$
     }
+
+    location /media {
+        alias /static/media;
+    }
 }
