--- a/clipis/package.json
+++ b/clipis/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.8.3",
-    "nuxt": "^2.14.12"
+    "lodash": "^4.17.21",
+    "nuxt": "^2.14.12",
+    "vue-masonry-css": "^1.0.3"
   },
   "devDependencies": {}
 }
