feature: nginx compress

--- a/nginx/data.conf
+++ b/nginx/data.conf
@@ -1,3 +1,5 @@
+include /usr/share/nginx/modules/*.conf;
+
 server {
     server_name www.clipis.co clipis.co www.api.clipis.co api.clipis.co;
     server_tokens off;
