feature: nginx compress

--- a/nginx/data.conf
+++ b/nginx/data.conf
@@ -1,4 +1,4 @@
-include /etc/nginx/modules/*.conf;
+load_module /etc/nginx/modules/ngx_http_image_filter_module.so;
 server {
     server_name www.clipis.co clipis.co www.api.clipis.co api.clipis.co;
     server_tokens off;
