--- a/nginx/data.conf
+++ b/nginx/data.conf
@@ -1,4 +1,3 @@
-load_module /etc/nginx/modules/ngx_http_image_filter_module.so;
 server {
     server_name www.clipis.co clipis.co www.api.clipis.co api.clipis.co;
     server_tokens off;
@@ -45,6 +44,7 @@ server {
     ssl_certificate /etc/letsencrypt/live/api.clipis.co/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/api.clipis.co/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
+    include /usr/share/nginx/modules/*.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
