--- a/nginx/data.conf
+++ b/nginx/data.conf
@@ -44,7 +44,7 @@ server {
     ssl_certificate /etc/letsencrypt/live/api.clipis.co/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/api.clipis.co/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
-    include /usr/share/nginx/modules/*.conf;
+    load_module /etc/nginx/modules/ngx_http_image_filter_module.so;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
