feature: nginx compress

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - global
 
   nginx:
-    image: nginx:latest
+    image: niiknow/nginx-image-proxy:latest
     restart: unless-stopped
     ports:
       - "80:80"
