--- a/nginx/data.conf
+++ b/nginx/data.conf
@@ -1,3 +1,5 @@
+load_module modules/ngx_http_image_filter_module.so;
+
 server {
     server_name www.clipis.co clipis.co www.api.clipis.co api.clipis.co;
     server_tokens off;
