--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,5 +1,5 @@
 load_module modules/ngx_http_image_filter_module.so;
-
+events {}
 http {
     server {
         server_name www.clipis.co clipis.co www.api.clipis.co api.clipis.co;
