--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -61,6 +61,9 @@ http {
 
         location /media/thumbs {
             alias /static/media;
+            image_filter resize 400 -;
+            image_filter_jpeg_quality 75;
+            image_filter_buffer 8M;
         }
     }
 }
