--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -49,6 +49,8 @@ http {
         include /etc/letsencrypt/options-ssl-nginx.conf;
         ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+        client_max_body_size 50m;
+
         location / {
             proxy_read_timeout          1m;
             proxy_connect_timeout       1m;
